# pyspark-data-reconciliation

./: .env.example  README.md  compose.yaml
app/: pyproject.toml
app/.devcontainer/: devcontainer.json
app/data/input/: erp_orders.csv  gateway_transactions.csv
app/docker/: Dockerfile
app/notebooks/: test.ipynb
app/src/config/bronze/: erp_orders.yaml  gateway_transactions.yaml
app/src/config/gold/: agg_reconciliation_summary.yaml  recon_order_result.yaml
app/src/config/silver/: erp_orders.yaml  gateway_transactions.yaml
app/src/jobs/: __init__.py  all.py
app/src/jobs/bronze/: erp_orders.py  gateway_transactions.py
app/src/jobs/gold/: agg_reconciliation_summary.py  recon_order_result.py
app/src/jobs/silver/: __init__.py  erp_orders.py  gateway_transactions.py
app/src/layers/: __init__.py
app/src/layers/bronze/: __init__.py  erp_orders.py  gateway_transactions.py
app/src/layers/gold/: __init__.py  agg_reconciliation_summary.py  recon_order_result.py
app/src/layers/silver/: erp_orders.py  gateway_transactions.py
app/src/readers/bronze/: erp_orders.py  gateway_transactions.py
app/src/readers/gold/: __init__.py  recon_order_result.py  (+1 more)
app/stagefy/: __init__.py  process.py
app/stagefy/connections/: __init__.py  spark.py
app/stagefy/decorators/: __init__.py  dataframe.py  log.py
app/stagefy/interfaces/: __init__.py  data_query.py  reader.py  view.py
app/stagefy/logging/: formatter.py  handler.py  logger.py
app/stagefy/reader/: __init__.py  csv.py  json.py  reader.py  yaml.py
app/stagefy/utils/: __init__.py  get_schema_columns.py
(+14 files in other folders)
