[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas<3",
    "pendulum>=3.2.0",
    "pyspark==3.5.8",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "flake8>=7.3.0",
    "ipykernel>=7.2.0",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "rope>=1.14.0",
    "ruff>=0.15.6",
]
